--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "node-fetch": "^2.7.0",
     "node-schedule": "^2.1.1"
