--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "node-fetch": "^2.7.0",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.7"
   }
 }
